--- a/env.example
+++ b/env.example
@@ -1,9 +1,9 @@
-DISCORD_TOKEN = MTA1MTkwNDQwMTk1MTk0ODgzMQ.GtWS6Y.wFc2Z878PAJhpfs9mcuXfNeXihi_cQcIV9vye0
-LOGS = 964654600483389521
+DISCORD_TOKEN= 
+LOGS= 
 
-Succes = ✅
-Cross = ❌
-Warn = ⚠
+Succes= ✅
+Cross= ❌
+Warn= ⚠
 
-SPOTIFY_CLIENT_ID = 5e08d8313a744e3a8be9b0005b40da24
-SPOTIFY_CLIENT_SECRET = e713c06dcd854e3fa4f8489d5f98ec22
+SPOTIFY_CLIENT_ID= 
+SPOTIFY_CLIENT_SECRET= 
